--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -232,7 +232,7 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.30.255.171;
+deny 178.29.161.57;
 deny 179.35.10.143;
 deny 179.43.128.16;
 deny 179.43.159.194;
@@ -539,7 +539,6 @@ deny 192.108.48.150;
 deny 192.210.160.31;
 deny 192.210.214.10;
 deny 192.210.255.47;
-deny 192.227.169.204;
 deny 192.3.141.157;
 deny 192.3.173.79;
 deny 192.3.228.229;
@@ -1096,6 +1095,7 @@ deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+deny 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
 deny 2a03:6f20:531::254;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
@@ -1119,7 +1119,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1345,6 +1344,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1476,6 +1476,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1531,7 +1532,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1554,6 +1554,7 @@ deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.30.188.218;
+deny 46.38.243.210;
 deny 50.6.204.90;
 deny 5.104.86.6;
 deny 51.15.59.15;
@@ -1566,7 +1567,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
