--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -96,6 +96,7 @@ allow 108.181.16.251;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
+allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
@@ -617,7 +618,6 @@ allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
-allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.43;
@@ -815,7 +815,6 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.127.231;
-allow 206.71.158.24;
 allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
@@ -859,7 +858,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1118,6 +1116,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1128,6 +1127,7 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1389,7 +1389,6 @@ allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:1::c758:3168;
 allow 2a10:8a40:f313::29;
@@ -1445,8 +1444,6 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
-allow 2a14:3f87:6ba0:16::a;
-allow 2a14:3f87:f001:14::a;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
@@ -1462,7 +1459,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.146.27.238;
 allow 38.97.116.244;
 allow 40.160.3.1;
 allow 45.11.229.132;
@@ -1527,7 +1523,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1538,7 +1533,6 @@ allow 45.84.107.47;
 allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
-allow 45.90.186.35;
 allow 45.9.148.50;
 allow 45.94.31.68;
 allow 45.95.169.100;
@@ -1551,7 +1545,6 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.30.188.218;
 allow 46.38.243.210;
-allow 50.6.204.90;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
@@ -1563,6 +1556,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1638,6 +1632,7 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
