--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -815,6 +815,7 @@ allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.127.231;
+allow 208.85.20.67;
 allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
@@ -858,6 +859,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1114,7 +1116,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
@@ -1138,6 +1139,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a05:f480:2800:1ee1:5400:5ff:fe16:c47a;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1554,7 +1556,6 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
-allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.100.26;
 allow 5.255.101.10;
