--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -232,7 +232,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.29.161.57;
 deny 179.35.10.143;
 deny 179.43.128.16;
 deny 179.43.159.194;
@@ -307,6 +306,22 @@ deny 185.195.236.55;
 deny 185.195.71.244;
 deny 185.207.107.130;
 deny 185.207.107.216;
+deny 185.220.100.240;
+deny 185.220.100.241;
+deny 185.220.100.242;
+deny 185.220.100.243;
+deny 185.220.100.244;
+deny 185.220.100.245;
+deny 185.220.100.246;
+deny 185.220.100.247;
+deny 185.220.100.248;
+deny 185.220.100.249;
+deny 185.220.100.250;
+deny 185.220.100.251;
+deny 185.220.100.252;
+deny 185.220.100.253;
+deny 185.220.100.254;
+deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
@@ -613,9 +628,6 @@ deny 193.189.100.203;
 deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
-deny 193.218.118.137;
-deny 193.218.118.182;
-deny 193.218.118.89;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.43;
@@ -671,6 +683,7 @@ deny 198.98.51.249;
 deny 198.98.54.49;
 deny 198.98.57.151;
 deny 198.98.57.74;
+deny 198.98.60.90;
 deny 198.98.61.60;
 deny 198.98.62.158;
 deny 199.195.249.214;
@@ -1114,7 +1127,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1167,6 +1179,22 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1385,9 +1413,6 @@ deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
-deny 2a0f:e586:f:f::182;
-deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
-deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:1fc0:1::c758:3168;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
@@ -1478,6 +1503,7 @@ deny 45.138.16.240;
 deny 45.138.16.248;
 deny 45.138.16.42;
 deny 45.138.16.76;
+deny 45.138.87.142;
 deny 45.141.215.110;
 deny 45.141.215.111;
 deny 45.141.215.114;
@@ -1522,6 +1548,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.101;
 deny 45.84.107.172;
 deny 45.84.107.182;
@@ -1554,7 +1581,6 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1611,6 +1637,7 @@ deny 74.82.47.194;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
+deny 79.102.144.160;
 deny 79.124.60.174;
 deny 80.241.60.207;
 deny 80.67.167.81;
